<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="25dp" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/subtitle"
        android:textSize="20dp" />

	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp" >

		<Button
		    android:id="@+id/btnAddOption"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:drawableLeft="@drawable/plus"		    
		    android:text="@string/btnAddOption"
		    android:layout_weight="1.0" />

		<Button
		    android:id="@+id/btnClearAll"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:drawableLeft="@drawable/delete"
		    android:text="@string/btnClearAll"
		    android:layout_weight="1.0"
		     />

	</LinearLayout>

    <ListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/option_ListView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"        
        android:background="@drawable/gear_padded_inverted"
        android:cacheColorHint="#00000000" >

    </ListView>

    <Button
        android:id="@+id/btnDecide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/gear"
        android:text="@string/btnDecide"
        android:textSize="25dp"
        android:layout_marginTop="10dp" 
        android:layout_marginBottom="10dp" />

</LinearLayout>